crates/atlas-runtime/tests/corpus/fail/type_errors/undefined_variable.atlas
let x: number = undefined_var + 1;
